@@ -28,6 +28,9 @@
 #include "CIAO_ServersS.h"
 #include "Object_Set_T.h"
 
+#include "ace/SString.h"
+
+
 namespace CIAO
 {
   /**
